<resources>
    <string name="app_name">Apienrillia</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_error">Email and password is required !</string>
    <string name="inter_error">Internal error occurred</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
</resources>
