<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:background="#e4e4e4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textColor="#2196F3"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="100dp"
        android:text="LOGIN TO ENRILLIA"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/status"
            android:textColor="#ff0000"
            android:layout_marginBottom="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:textColor="#ffffff"
            android:background="#2196F3"
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/textSignUp"
        android:textSize="20sp"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:text="SIGN UP"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
